# take-home-trustpilot

./: .gitignore  Makefile  README.md  pyproject.toml
data/: dev.duckdb  prod.duckdb
docker/api/: .dockerignore  Dockerfile
docker/data/: .dockerignore  Dockerfile
tp_api_project/: .env  .env.example  README.md  pyproject.toml
tp_api_project/app/: __init__.py  config.py  db.py  exceptions.py  logging_config.py  main.py  queries.py  schemas.py  utils.py
tp_api_project/tests/: test_api.py
tp_api_project/tests/data/: business.csv  user_info.csv  user_reviews.csv
tp_data_project/: .env  .gitignore  .sqlfluff  README.md  dbt_project.yml  pyproject.toml
tp_data_project/macros/: env_utils.sql  get_custom_db.sql  get_custom_schema.sql
tp_data_project/models/: exposures.yml
tp_data_project/models/certified/crt_tp_reviews/: crt_tp_reviews.sql  schema.yml
tp_data_project/models/staged/stg_tp_reviews/: schema.yml  stg_tp_reviews.sql
tp_data_project/seeds/: schema.yml  tp_reviews.csv
