[project]
name = "take-home-trustpilot"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter Osztodi",email = "osztodipeter@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb (>=1.9.6,<2.0.0)",
    "duckdb (>=1.4.0,<2.0.0)",
    "dbt-core (>=1.10.13,<2.0.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
httpx = "^0.28.1"

