[tool.poetry]
name = "take-home-trustpilot"
version = "0.1.0"
description = "Trustpilot take-home workspace"
authors = ["Peter Osztodi <osztodipeter@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
