[tool.poetry]
name = "tp-api-project"
version = "0.1.0"
description = "Trustpilot take-home REST API"
authors = ["Peter Osztodi <osztodipeter@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
duckdb = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
httpx = "^0.28.1"
mockito = "^1.4.0"
ruff = "^0.7.1"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
]
ignore = [
    "E501",  # handled via formatter preferences within the team
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
